Bug 1947917 - Add cubeb patch to increase AAudio buffering when not doing low-latency and re-vendor.  a=dmeehan

Original Revision: https://phabricator.services.mozilla.com/D238767

Differential Revision: https://phabricator.services.mozilla.com/D238768